# PurviewforAICxETeam

./: README.md
Agent365PurviewSDKOnboarder/: .gitignore  CHANGELOG.md  Diagnose-Environment.ps1  Diagnose.bat  Launch-AgentOnboarder.ps1  Launch.bat  README.md  agent365_onboarder.py  pyproject.toml  requirements.txt
Agent365PurviewSDKOnboarder/app/: __init__.py  azure_vaults.py  codegen.py  diagnostics.py  identity.py  keyvault.py  onboarder.py  workflow.py
Agent365PurviewSDKOnboarder/app/codegen_templates/: .gitignore.tmpl  README.md.tmpl  adapter_anthropic.py.tmpl  adapter_azure_openai.py.tmpl  adapter_bedrock.py.tmpl  adapter_http.py.tmpl  adapter_openai.py.tmpl  adapter_vertex.py.tmpl  agent_observability.py.tmpl  env.tmpl  keyvault.py.tmpl  requirements.txt.tmpl  server.py.tmpl  wrapper.py.tmpl
Agent365PurviewSDKOnboarder/app/static/: style.css
Agent365PurviewSDKOnboarder/app/templates/: _prereq_body.html  base.html  diagnostics.html  form.html  history.html  prerequisites.html  prerequisites_embed.html  progress.html  result.html
Agent365PurviewSDKOnboarder/installer/: agent365_onboarder.spec  agent365_onboarder_onedir.spec
Agent365PurviewSDKOnboarder/installer/hooks/: hook-workflow.py
Agent365PurviewSDKOnboarder/scripts/: build_exe.ps1  migrate_existing_to_kv.py
FeatureRequests/: README.md  create_fr_from_uat.py  link_eng_to_fr.py  link_uat_to_fr.py  package_sanitized.py  promote_to_feature.py  purview-admin-config.json  purview-ai-actions.html  purview-ai-admin.html  purview-ai-engineering-ado.html  purview-ai-feature-requests.html  purview-ai-features.html  purview-ai-roadmap.html  purview-ai-technical-feedback.html  purview-auto-refresh.ps1  purview-auto-refresh.py  purview-auto-refresh.sh  purview-data.js  purview_ai_feature_requests.html  refresh_dashboard.py  refresh_server.py  sync_ado_to_crm.py  update_crm_status.py  update_uat_state.py
P4AI-Dashboard/: .gitignore  README.md  purview-for-ai-dashboard.html
P4AI-Dashboard-PowerBI/: PurviewForAI.pbip  README.md
P4AI-Dashboard-PowerBI/PurviewForAI.Report/: .platform  definition.pbir  report.json
P4AI-Dashboard-PowerBI/PurviewForAI.Report/definition/: report.json
P4AI-Dashboard-PowerBI/PurviewForAI.SemanticModel/: .platform  definition.pbism  model.bim
P4AI-Dashboard-PowerBI/PurviewForAI.SemanticModel/definition/: model.bim
P4AI-Dashboard/backend/: app.py  startup.sh
backend/: requirements.txt
docs/: index.html
